--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
 
             <section class="container_piece container_piece_6">
 			<div class="portfolio_content portfolio_content_right">
-			  <div class="portfolio_content_img"><a href="portfolio-sce.html"><img src="img/6.png"></a></div>	
+			  <div class="portfolio_content_img"><a href="portfolio-player.html"><img src="img/6.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sce.html" title="SoHu Film Website">Music Player</a></h2>
+                            <h2 class="heading2"><a href="portfolio-player.html" title="SoHu Film Website">Music Player</a></h2>
                             <span class="headingline headingline_film"></span>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> SoHu Film Website is a website which provided the premium movies. Our objective is to improve a better online Movie-Going experience. </blockquote>
                             </figure>
-							 <a href="portfolio-sce.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
+							 <a href="portfolio-player.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
                         </div>
               </div>
             </div>
