--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -82,9 +82,6 @@
 		        <div class="number_box">5</div>  
 		        <div class="design_title">REFINE</div>
 		        <div class="design_img"><img src="img/hci_10.png"></div>
-		        <div class="design_p"><span> Hold the information which can not influence</span></div>
-		        <div class="design_p"><span>- Reduce click steps tp improve a better interactive experience.</span></div>
-		        <div class="design_p"><span>- Show the button state clearly to make sure patients not confused when they operated</span></div>
 		        <div class="design_img"><img src="img/hci_11.png"></div>
 		    </div>
 		    
@@ -95,6 +92,13 @@
 		        <div class="design_img"><img src="img/hci_design_elements.png"></div>
 		        <div class="design_img"><img src="img/hci_8.png"></div>
             </div>
+
+            <div class="part part_9">    
+		        <div class="number_box">7</div>
+		        <div class="design_title">NEXT STEP</div>
+		        <div class="design_subt" style="max-width:960px; margin:0 auto;"><span>Our team will gather data and analyze those data to find the currect users behaviors. To further understand how the users using our App, design a better user experience.</span></div>
+            </div>
+
 	      </div>  
 	    </div>
     
