--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="BD">
@@ -29,17 +30,17 @@
 		</div>
 		</div>
 
-	    <div class="main_design_container">
+	    <div class="main_design_container" id="fullpage">
 	      <div class="container_box cb_seeword">
 
-	      	<div class="part part_0">
-		    	<div class="title_inside">SEE WORD READING Website Design</div>
+	      	<div class="section part part_0">
+		    	<div class="title_inside">SEE WORD READING Teacher App Design</div>
 	        </div>
 
-	    	<div class="part part_1">
+	    	<div class="section part part_1">
 		        <div id="ti_img" class="design_img"><img src="img/seeword.png"></div>
 		        <div class="design_ui"><span>Help Teacher to find the data information <em>EASILY</em> and <em>QUICKLY</em></span></div>
-		        <div class="design_p"><span>See word reading Website is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study.</span></div>
+		        <div class="design_p"><span>See word reading App teach the younger primary students study the phoneme. Teacher through analysis the recorded data to help student improve the study.</span></div>
 	        </div>
             <div class="part part_2">
 	            <div class="title_inside"> DESIGN PROCESS</div>
@@ -85,6 +86,19 @@
 	        		  </ul>
 	        	</div>
         	</div>	
-    </div>
+ </div>
+</div>
+</div>
+
+<script type="text/javascript">
+		$(document).ready(function() {
+			$('#fullpage').fullpage({
+				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
+				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
+				menu: '#menu',
+				scrollingSpeed: 1000
+			});
+		});
+	</script>
 </body>
 </html>
