--- a/portfolio.html
+++ b/portfolio.html
@@ -29,107 +29,60 @@
 		</div>
 		</div>
 
-                <div class="container" id="project_intro">
+        <div class="container" id="project_intro">
 
-            <section class="container_piece container_piece_3">
-            <div class="portfolio_content portfolio_content_left">
-                 <div class="portfolio_content_img"><a href="portfolio-hci.html"><img src="img/hci_tv.gif"></a></div>   
-              <div class="copy title-border1">
-                        <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-hci.html" title="See Word Reading Project">HCI TV App</a></h2>
-                            <span class="headingline headingline_hci"></span>
-                            <figure class="quote meta">
-                                <blockquote class="heading6">Health Care Information TV App to ensure that great content is delivered to Patients as clearly as possible.</blockquote>
-                            </figure>
-                             <a href="portfolio-hci.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
-                        </div>
-               </div>
-            </div>
-            </section>
-
-            <section class="container_piece container_piece_4">
-            <div class="portfolio_content portfolio_content_right">
-                 <div class="portfolio_content_img"><a href="portfolio-seewordapp.html"><img src="img/seewordapp.png"></a></div>    
-              <div class="copy title-border1">
-                        <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-seewordapp.html" title="See Word Reading Project">See Word Reading Teacher App</a></h2>
-                            <span class="headingline headingline_see"></span>
-                            <figure class="quote meta">
-                                <blockquote class="heading6">See word reading teacher app is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study. </blockquote>
-                            </figure>
-                             <a href="portfolio-seewordapp.html" title="See Word Reading Web Design Project" class="btn btn2">View Project</a>
-                        </div>
-               </div>
-            </div>
-            </section>
-
-            <section class="container_piece container_piece_1">
-            <div class="portfolio_content portfolio_content_left">
-              <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/1s.png"></a></div> 
-              <div class="copy title-border1">
-                        <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">Sohu Film Website</a></h2>
-                            <span class="headingline headingline_film"></span>
-                            <figure class="quote meta">
-                                <blockquote class="heading6"> SoHu Film Website is a website which provided the premium movies. Our objective is to improve a better online Movie-Going experience. </blockquote>
-                            </figure>
-                             <a href="portfolio-sohufilm.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
-                        </div>
+          <section class="container_piece container_piece_1" style="height:400px;">
+              <div class="works_category_tiles"> 
+                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color: #eff7f9;" title="Health Care Information TV APP Project">
+                    <span class="works_category_tiles_item_cover bg">
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.jpg); background-position:center; background-size:cover;"></div>
+                    </span>
+                    <span>
+                        <h2 class="heading2">HCI TV App</h2>
+                    </span>
+                  </a>
               </div>
-            </div>
             </section>
 
-            <section class="container_piece container_piece_5">
-            <div class="portfolio_content portfolio_content_right">
-              <div class="portfolio_content_img"><a href="portfolio-sce.html"><img src="img/5.png"></a></div>   
-              <div class="copy title-border1">
-                        <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sce.html" title="SoHu Film Website">Sohu Fans App</a></h2>
-                            <span class="headingline headingline_film"></span>
-                            <figure class="quote meta">
-                                <blockquote class="heading6">Sohu Fans App draws fans deeper into American drama, allowing them to predict the outcome of every pitch and every play. It’s the perfect companion to being at the ballpark.</blockquote>
-                            </figure>
-                             <a href="portfolio-sce.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
-                        </div>
+            <section class="container_piece container_piece_1" style="height:400px;">
+              <div class="works_category_tiles"> 
+                  <a href="portfolio-seewordapp.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #79CDE2;" title="See Word Reading Project">
+                    <span class="works_category_tiles_item_cover bg">
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
+                    </span>
+                    <span>
+                        <h2 class="heading2">See Word Reading</h2>
+                    </span>
+                  </a>
               </div>
-            </div>
             </section>
 
-
-            <section class="container_piece container_piece_2">
-            <div class="portfolio_content portfolio_content_left">
-                 <div class="portfolio_content_img"><a href="portfolio-sce.html"><img src="img/sce1.png"></a></div> 
-              <div class="copy title-border1">
-                        <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sce.html" title="Sohu Cloudscape">Sohu Cloudscape</a></h2>
-                            <span class="headingline headingline_see"></span>
-                            <figure class="quote meta">
-                                <blockquote class="heading6">Sohu Cloudscape provided the best Paas service.</blockquote>
-                            </figure>
-                             <a href="portfolio-sce.html" title="Sohu Cloudscape Web Design Project" class="btn btn2">View Project</a>
-                        </div>
-               </div>
-            </div>
-            </section>
-
-            <section class="container_piece container_piece_6">
-            <div class="portfolio_content portfolio_content_right">
-              <div class="portfolio_content_img"><a href="portfolio-sce.html"><img src="img/1.png"></a></div>   
-              <div class="copy title-border1">
-                        <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sce.html" title="SoHu Film Website">Music Player</a></h2>
-                            <span class="headingline headingline_film"></span>
-                            <figure class="quote meta">
-                                <blockquote class="heading6"> SoHu Film Website is a website which provided the premium movies. Our objective is to improve a better online Movie-Going experience. </blockquote>
-                            </figure>
-                             <a href="portfolio-sce.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
-                        </div>
+            <section class="container_piece container_piece_1" style="height:400px;">
+              <div class="works_category_tiles"> 
+                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color: #ffd316;" title="SoHu Film Website Project">
+                    <span class="works_category_tiles_item_cover bg">
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.jpg); background-position:center; background-size:cover;"></div>
+                    </span>
+                    <span>
+                        <h2 class="heading2">Sohu Film Website</h2>
+                    </span>
+                  </a>
               </div>
-            </div>
             </section>
 
-
-
+            <section class="container_piece container_piece_1" style="height:400px;">
+              <div class="works_category_tiles"> 
+                  <a href="portfolio-sce.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #666;" title="SoHu Cloud Engine Project">
+                    <span class="works_category_tiles_item_cover bg">
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/sce1.png); background-position:center; background-size:cover;"></div>
+                    </span>
+                    <span>
+                        <h2 class="heading2" style="color:#fff;">Sohu SCE Website</h2>
+                    </span>
+                  </a>
+              </div>
+            </section>
+            
         </div>
 
 
