--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
 	    		<div class="ati">
 	    	      <div class="main_t">
 	    			<span class="main_t_l">UI & UX Designer in HCI-TV, Cincinnati,Ohio, USA</span>
-	    			<span class="main_t_r">May 2015 - August 2015</span>
+	    			<span class="main_t_r">May 2015 - Present</span>
 	    		  </div>
 	    		<p>- Re-design the Media care App for Android TV, design the monile website App</p>
 	    	    </div>
