--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
     <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 </head>
 <body>
 	<div class="BD" id="fullpage">
@@ -20,7 +21,7 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><span class="logo_img"></span></a>
+				<a href="index.html"><span class="logo_img hci_logo_img"></span></a>
 			</div>
 				<ul class="menu">
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
@@ -34,24 +35,38 @@
 	      <div class="container_box cb_hci">
 
 	    	<div class="section part part_0">
-	    		<div class="title_inside"><span>Health Care Information TV App</span></div>
+	    		<div class="slide title_inside"><span>Health Care Information TV App</span></div>
 	        </div>
 
 	        <div class="section part part_1">
-	        	<div class="design_title"> WHAT WE DO ?</div>
-		        <div class="design_t_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
-		        <div class="design_img"><img src="img/hci_3.png"></div>
+	        	<div class="section_img">
+                		<div class="section_bg_img" style="background:url(img/hci_3.3.png) 50% 50% no-repeat;background-size:80%;"></div>
+                </div>
+
+	    		<div class="section_text">
+			        <div class="title_inside">Operate<br>More<br>Easy</div>
+			        <div class="design_ui">
+			        	<span>Prove a better expeirences on health care education & service for Patients</span>
+			        </div>
+			    </div>
 	        </div>
 
             <div class="section part part_2">
-	            <div class="design_title"> REDESIGN THE ANDROID TV APP</div>
-	             <div class="design_ui"><span>Prove a better health care education & service expeirences for Patients</span></div>
-	        </div>    
-	        <div class="section part part_3">    
-		        <div class="number_box">1</div>
-		        <div class="design_title">OBSERVE</div>
-		        <div class="design_p"><span>Observe how the patients operate the TV on connatural condition, find the elvements which will inflence the operation by patients</span></div>
+            	<div class="title_inside" style="text-align:center;">Observe</div>
 		        <div class="design_img"><img src="img/hci_2.png"></div>
+	        </div>  
+
+	        <div class="section part part_3">
+	        	<div class="section_img">
+                		<div class="section_bg_img" style="background:url(img/hci_5.png) 50% 50% no-repeat;background-size:90%;"></div>
+                </div>
+
+	    		<div class="section_text">
+			        <div class="title_inside">Define the problems</div>
+			        <div class="design_ui">
+			        	<span>Prove a better expeirences on health care education & service for Patients</span>
+			        </div>
+			    </div>
 		    </div>    
 		    <div class="section part part_4">    
 		        <div class="number_box nb">2</div>
