--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -52,14 +52,16 @@
 	        </div>
 
             <div class="section part part_2">
-            	<div class="section_img">
-                		<div class="section_bg_img" style="background:url(img/seeword2.png) no-repeat; background-size:cover;"></div>
+            	<div class="section_img" style="background:#71C0C9;">
+                		<div class="section_bg_img" style="background:url(img/seeword2.png) no-repeat; background-size:80%; background-position:0% 50%;"></div>
                 </div>
 
 	    		<div class="section_text">
-			        <div class="title_inside"> What problems we have?</div>
+			        <div class="title_inside"> Research & <br> Key Problems</div>
 			        <div class="design_ui">
-			        	<span>Collaborated with the See Word Reading Student App to help teachers find the valuable data information EASILY and QUICKLY.</span>
+			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:2.5rem;">+ </em><b> Jumbled Information</b></span><br>
+			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:2.5rem;">+ </em><b> Complicated Operation</b></span><br>
+			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:2.5rem;">+ </em><b> Unfriendly User Experience</b></span>
 			        </div>
 			    </div>
 	        </div>
