--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
-</head>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
 <body>
 	<div class="BD">
 		<div class="Bg">
@@ -21,11 +22,18 @@
 			<div class="top-img">
 				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
-				<ul class="menu menu_resume">
-					<li><a href="portfolio.html">PORTFOLIO</a></li>
-					<li class="selected"><a href="resume.html">RESUME</a></li>
-					<li><a href="myself.html" >ABOUT ME</a></li>
-				</ul>
+				
+			<div id="navbar" class="menu">
+		      <a href="#" class="menubtn">menu</a>
+		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
+		        <ul>
+		          <li><a href="portfolio.html">PORTFOLIO</a></li>
+		          <li><a href="resume.html">RESUME</a></li>
+		          <li><a href="myself.html">ABOUT ME</a></li>
+		        </ul>
+		      </div>
+		    </div>
+
 		</div>
 		</div>
 
