--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -56,7 +56,7 @@
 	    		<div class="section_text">
 			        <div class="title_inside" style="color:#fff;"> Accuracy & Efficiency</div>
 			        <div class="design_ui" style="color:#eee;">
-			        	<span>Collaborated with the See Word Reading Student App to help teachers find the valuable data information EASILY and QUICKLY.</span>
+			        	<span>Collaborated with the See Word Reading Student App to help teachers find the <em>VALUABLE DATA INFORMATIONS</em> and set up the <em>COURSE CONTENTS </em>Easily & Quickly.</span>
 			        </div>
 			    </div>
 	        </div>
@@ -77,7 +77,15 @@
 	        </div>
 
 	        <div class="section part part_3">
-		      
+	        	<div class="section_img" style="width:100%;">
+                		<div class="section_bg_img" style="background:url(img/seeword_14.png) no-repeat; background-size:70%; background-position:50% 80%;"></div>
+                </div>
+
+	    		<div class="section_text">
+			        <div class="title_inside" style="font-size: 2rem;color: #666;top: -200px;position: relative;"> Making Information Structure</div>
+			        <div class="design_ui">
+			        </div>
+			    </div>
 		    </div>
 		    
 		    <div class="section part part_4">  
