--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -50,12 +50,12 @@
 	        </div>
 
 	        <div class="section part part_1">
-	        	<div class="section_img">
+	        	<div class="section_img" style="background:#258de8;">
                 		<div class="section_bg_img" style="background:url(img/hci_3.3.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
 
-	    		<div class="section_text">
-			        <div class="title_inside">Operate<br>More<br>Easy</div>
+	    		<div class="section_text" style="width:35%; z-index:2; position:relative;">
+			        <div class="title_inside">Operate <br>More Easy</div>
 			        <div class="design_ui">
 			        	<span>Prove a better expeirences on health care education & service for Patients</span>
 			        </div>
@@ -69,7 +69,7 @@
 
 	        <div class="section part part_3">
 	        	<div class="section_img">
-                		<div class="section_bg_img" style="background:url(img/hci_5.png) 50% 50% no-repeat;background-size:90%;"></div>
+                		<div class="section_bg_img" style="background:url(img/hci_5.png) 0% 50% no-repeat;background-size:90%;"></div>
                 </div>
 
 	    		<div class="section_text">
@@ -80,19 +80,19 @@
 			    </div>
 		    </div>    
 		    <div class="section part part_4">
-		        <div class="section_img">
-                		<div class="section_bg_img" style="background:url(img/hci_12.png) 50% 50% no-repeat;background-size:90%;"></div>
-                </div>
-
-	    		<div class="section_text">
+		    	<div class="section_text">
 			        <div class="title_inside">Define the Problems</div>
 			        <div class="design_ui">
 			        	<span></span>
 			        </div>
 			    </div>
+			    
+		        <div class="section_img">
+                		<div class="section_bg_img" style="background:url(img/hci_12.png) 50% 50% no-repeat;background-size:90%;"></div>
+                </div>
 		    </div>
 
-		    <div class="section part part_5">
+		    <div class="section part part_5" style="background:#258de8;">
 		        <div class="title_inside" style="text-align:center;">Visual Problems</div>
 		        <div class="design_p"><span>- The alert box shows in a unfriendly way.</span></div>
 		        <div class="design_p"><span>- The information shows not clear is a source of confusion.</span></div>
