--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -50,7 +50,7 @@
 
 	      	<div class="section part part_0">
 		    	<div class="slide title_inside"><span>SEE WORD READING Teacher App Design</span></div>
-		    	<a class="btn_down" href="#page2"></a>
+		    	<a class="btn_down" href="#page2"><span class="btn_down_el"></span></a>
 	        </div>
 
 	    	<div class="section part part_1">
@@ -58,9 +58,9 @@
                 		<div class="section_bg_img" style="background:url(img/seeword4.png) no-repeat; background-size:cover;"></div>
                 </div>
 
-	    		<div class="section_text">
+	    		<div class="section_text" style="width: 100%;padding: 70px 150px;background-color: #71C0C9;margin: 0;">
 			        <div class="title_inside" style="color:#fff;"> About the Project</div>
-			        <div class="design_ui" style="color:#eee;">
+			        <div class="design_ui" style="color:#eee;width: 55%;margin: 2rem 0 0 0;">
 			        	<span>Collaborated with the See Word Reading Student App to help teachers set up the Course Contents and find the Valuable Data Informations to be Efficiently & Accurately .</span>
 			        </div>
 			    </div>
@@ -78,7 +78,7 @@
 	    		<div class="splitter_text">
 			        <div class="splitter_title"> FROM OKAY TO  DELIGHTFUL</div>
 			        <div class="splitter_p" style="color:#666;">
-			        	<span>ORIGINAL | OUR VISION</span>
+			        	<span style="color:#000;"><em style="font-style:normal;color:#ccc;">ORIGINAL</em> | <em style="font-style:normal;color:#fff;">OUR VISION</em></span>
 			        </div>
 			    </div>
 	        </div>
@@ -100,7 +100,7 @@
 
 	        <div class="section part part_4">
 	        	<div class="section_img" style="width:100%;">
-                		<div class="section_bg_img" style="background:url(img/seeword_14.png) no-repeat; background-size:70%; background-position:50% 80%;"></div>
+                		<div class="section_bg_img" style="background:url(img/seeword_14.png) no-repeat; background-size:100%; background-position:50% 80%;"></div>
                 </div>
 
 	    		<div class="section_text">
