--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -98,7 +98,7 @@
 			    </div>
 	        </div>
 
-	        <div class="section part part_4">
+	        <div class="section part part_4" style="background-color: #71C0C9;">
 	        	<div class="section_img" style="width:100%;">
                 		<div class="section_bg_img" style="background:url(img/seeword_14.png) no-repeat; background-size:100%; background-position:50% 80%;"></div>
                 </div>
