--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -124,10 +124,8 @@
 		    </div>
 		    
 		    <div class="section part part_6">    
-		        <div class="design_title">SOLUTION</div>
-		        <div class="design_img"><img src="img/seeword3.png"></div>
-		        <div class="design_ui"><span>Wireframe</span></div>
-		        <div class="design_img"><img src="img/seeword4.png"></div>
+		        <div class="title_inside"> Wireframe</div>
+		        <div class="design_img"><img src="img/seeword7.png"></div>
 		    </div>
 
 		    <div class="section part part_7">
