--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="js/splitter.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
+    <link rel="stylesheet" type="text/css" href="css/wireframe.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
 </head>
 <body>
@@ -123,12 +124,86 @@
 		        </div>
 		    </div>
 		    
-		    <div class="section part part_6">    
-		        <div class="title_inside"> Wireframe</div>
-		        <div class="design_img"><img src="img/seeword7.png"></div>
+		    <div class="section part part_6">
+			        <div class="section_img">
+	                		<div class="section_bg_img" style="background:url(img/seeword7.png) no-repeat; background-size:cover;"></div>
+	                </div>
+
+		    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
+				        <div class="title_inside"> Wireframe</div>
+				        <div class="design_ui" style="color:#777;width: 55%;margin: 2rem 0 0 0;">
+				        	<span>Collaborated with the See Word Reading Student App to help teachers set up the Course Contents and find the Valuable Data Informations to be Efficiently & Accurately .</span>
+				        </div>
+				    </div>
 		    </div>
 
-		    <div class="section part part_7">
+		    <div class="section part part_7" style="background-color:#e5e9ea;">
+		    	<div class="wireframes">
+		    		<div class="container" style="background-color:rgba(229,233,234,0); overflow:visible;">
+		    			<div class="row" style="padding-bottom: 165px;padding-top: 20px;">
+		    				<div class="col-xs-12">
+		    					<h2>WIREFRAMES</h2>
+		    					<h3>A couple out of a handful of iterations we went through.</h3>
+		    				</div>
+		    			</div>
+
+		    			<div class="row">
+		    				<div class="wireframe-step breath-top fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
+		    					<span class="number">1</span>
+		    					<p class="on-left">
+		    						<span class="text">
+		    							<span class="title">Navigation</span>Find a best way to help users use the App with a shortest time and a minimum number of operates.
+		    						</span>
+		    					</p>
+		    					<img class="on-right" src="img/nav1.png" style="right:-30px;position: absolute;top: -119px;">
+		    					<img class="on-right" src="img/nav2.png" style="right:-30px;position: absolute;top: 31px;">
+		    				</div>
+
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;top:-119px;">
+		    					<span class="number" style="top:50px;">2</span>
+		    					<p class="on-left">
+		    						<span class="text">
+		    							<span class="title">View Data</span>The application sends an invitation to each participant.</span>
+		    					</p>
+		    					<img class="on-right" src="img/data.png" style="right:-30px;padding:0;top:0px;">
+		    					<img class="on-right" src="img/inforgraphic.png" style="right:-30px;padding:0;bottom:-150px;">
+		    				</div>
+
+		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
+		    					<span class="number">3</span>
+		    					<p class="on-left">
+		    						<span class="text">
+		    							<span class="title">View Inforgraphic</span>Meetings are automatically scheduled both in the app and in the user’s calendar.</span>
+		    					</p>
+		    				</div>
+		    			</div>
+
+		    			<div class="row">
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;height: 120px;top:30px;">
+		    					<span class="number" style="left: 175px;top: 33px;">4</span>
+		    					<p class="on-left">
+		    						<span class="text">
+		    							<span class="title">Set Up</span>The user can access the meeting details at all times.
+		    						</span>
+		    					</p>
+		    					<img class="on-right" src="img/set up.png" style="padding: 0;top: -30px;left: 0;">
+		    				</div>
+
+		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">
+		    					<span class="number">5</span>
+		    					<p class="on-left">
+		    						<span class="text"><span class="title">Further</span>The meeting will be programmed automatically, based on the user's schedule.</span>
+		    					</p>
+		    					<img class="on-right" src="img/further.png" style="right:0px;">
+		    				</div>
+		    				<div class="wireframe-step" style="background-color:rgba(0,0,0,0)"></div>
+		    			</div>
+		    		</div>
+		    	</div>
+
+			</div>	
+
+			 <div class="section part part_8">   
 		        <div class="design_title">USER TESTING</div>
 		        <div class="design_img"><img src="img/seeword6.png"></div>
 		        <div class="number_box nb">4</div>
