--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -137,7 +137,7 @@
 				    </div>
 		    </div>
 
-		    <div class="section part part_7" style="background-color:#e5e9ea;">
+		    <div class="section part part_7" style="background-color: rgb(238, 238, 238);">
 		    	<div class="wireframes">
 		    		<div class="container" style="background-color:rgba(229,233,234,0); overflow:visible;">
 		    			<div class="row" style="padding-bottom: 165px;padding-top: 20px;">
@@ -152,41 +152,41 @@
 		    					<span class="number">1</span>
 		    					<p class="on-left">
 		    						<span class="text">
-		    							<span class="title">Navigation</span>Find a best way to help users use the App with a shortest time and a minimum number of operates.
+		    							<span class="title">Navigation</span>Using the App with a shortest time and a minimum number of operates.
 		    						</span>
 		    					</p>
 		    					<img class="on-right" src="img/nav1.png" style="right:-30px;position: absolute;top: -119px;">
 		    					<img class="on-right" src="img/nav2.png" style="right:-30px;position: absolute;top: 31px;">
 		    				</div>
 
-		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;top:-119px;">
-		    					<span class="number" style="top:50px;">2</span>
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;top:-119px;left: 30px;">
+		    					<span class="number" style="top: 140px;right: 165px;">2</span>
 		    					<p class="on-left">
 		    						<span class="text">
 		    							<span class="title">View Data</span>The application sends an invitation to each participant.</span>
 		    					</p>
-		    					<img class="on-right" src="img/data.png" style="right:-30px;padding:0;top:0px;">
-		    					<img class="on-right" src="img/inforgraphic.png" style="right:-30px;padding:0;bottom:-150px;">
+		    					<img class="on-right" src="img/data.png" style="position:absolute;right:-30px;padding:0;top:0px;">
 		    				</div>
 
-		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
+		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;background-color:#519ba3;">
 		    					<span class="number">3</span>
-		    					<p class="on-left">
+		    					<p class="on-left" style="padding-top: 70px;">
 		    						<span class="text">
 		    							<span class="title">View Inforgraphic</span>Meetings are automatically scheduled both in the app and in the user’s calendar.</span>
 		    					</p>
+		    					<img class="on-right" src="img/inforgraphic.png" style="position:absolute;right:-30px;padding:0;bottom:-50px;">
 		    				</div>
 		    			</div>
 
 		    			<div class="row">
-		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;height: 120px;top:30px;">
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;top:-24px;background-color:#519ba3;">
 		    					<span class="number" style="left: 175px;top: 33px;">4</span>
-		    					<p class="on-left">
+		    					<p class="on-right-text">
 		    						<span class="text">
 		    							<span class="title">Set Up</span>The user can access the meeting details at all times.
 		    						</span>
 		    					</p>
-		    					<img class="on-right" src="img/set up.png" style="padding: 0;top: -30px;left: 0;">
+		    					<img class="on-right" src="img/set up.png" style="padding: 0;top:0px;left: 0;position:absolute;">
 		    				</div>
 
 		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">
