--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -123,27 +123,14 @@
 		        	</div>
 		        </div>
 		    </div>
-		    
-		    <div class="section part part_6">
-			        <div class="section_img">
-	                		<div class="section_bg_img" style="background:url(img/seeword7.png) no-repeat; background-size:cover;"></div>
-	                </div>
 
-		    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
-				        <div class="title_inside"> Wireframe</div>
-				        <div class="design_ui" style="color:#777;width: 55%;margin: 2rem 0 0 0;">
-				        	<span>Collaborated with the See Word Reading Student App to help teachers set up the Course Contents and find the Valuable Data Informations to be Efficiently & Accurately .</span>
-				        </div>
-				    </div>
-		    </div>
-
-		    <div class="section part part_7" style="background-color: rgb(238, 238, 238);">
+		    <div class="section part part_6" style="background-color: #f2f2f5;">
 		    	<div class="wireframes">
-		    		<div class="container" style="background-color:rgba(229,233,234,0); overflow:visible;">
+		    		<div class="container" style="background-color:#f2f2f5; overflow:visible;">
 		    			<div class="row" style="padding-bottom: 165px;padding-top: 20px;">
-		    				<div class="col-xs-12">
+		    				<div class="row_text">
 		    					<h2>WIREFRAMES</h2>
-		    					<h3>A couple out of a handful of iterations we went through.</h3>
+		    					<h3 style="color:#777;font-size:1rem; font-weight:300;">A couple out of a handful of iterations we went through.</h3>
 		    				</div>
 		    			</div>
 
@@ -180,13 +167,13 @@
 
 		    			<div class="row">
 		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;top:-24px;background-color:#519ba3;">
-		    					<span class="number" style="left: 175px;top: 33px;">4</span>
-		    					<p class="on-right-text">
+		    					<span class="number" style="right: 75px;top: 180px;">4</span>
+		    					<p class="on-right-text" style="top:55px;">
 		    						<span class="text">
 		    							<span class="title">Set Up</span>The user can access the meeting details at all times.
 		    						</span>
 		    					</p>
-		    					<img class="on-right" src="img/set up.png" style="padding: 0;top:0px;left: 0;position:absolute;">
+		    					<img class="on-right" src="img/set up.png" style="padding: 0;bottom:-20px;left: 0;position:absolute;">
 		    				</div>
 
 		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">
@@ -194,7 +181,7 @@
 		    					<p class="on-left">
 		    						<span class="text"><span class="title">Further</span>The meeting will be programmed automatically, based on the user's schedule.</span>
 		    					</p>
-		    					<img class="on-right" src="img/further.png" style="right:0px;">
+		    					<img class="on-right" src="img/further.png" style="right:-50px;top:20px;position:absolute;">
 		    				</div>
 		    				<div class="wireframe-step" style="background-color:rgba(0,0,0,0)"></div>
 		    			</div>
@@ -204,8 +191,9 @@
 			</div>	
 
 			 <div class="section part part_8">   
-		        <div class="design_title">USER TESTING</div>
+		        <div class="design_title_left"><span><p>Refine</p></span></div>
 		        <div class="design_img"><img src="img/seeword6.png"></div>
+		    </div>    
 		        <div class="number_box nb">4</div>
 		        <div class="design_title">VISUAL INTERFACE</div>
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>  
